# traffic-pulse-system

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-doxygen.yml  .gitlab-test-app.yml  AnomalyDetector_8h_source.html  BFSUtils_8h_source.html  CMakeBinaryDir_8h_source.html  CMakeLists.txt  CommonTypes_8h_source.html  GreenWaveCoridor_8h_source.html  IObserver_8h_source.html  ISubject_8h_source.html  IntersectionStatistics_8h_source.html  Logger_8h_source.html  Makefile  PulseDataManager_8h_source.html  PulseEntityFactory_8h_source.html  PulseEntityType_8h_source.html  PulseEntity_8h_source.html  PulseErrorCode_8h_source.html  PulseEvent_8h_source.html  PulseEvents_8h_source.html  PulseException_8h_source.html  PulseIntersection_8h_source.html  PulseLoader_8h_source.html  PulsePosition_8h_source.html  PulseRoadConnection_8h_source.html  PulseStatsCollector_8h_source.html  PulseTrafficAlgo_8h_source.html  PulseTrafficLight_8h_source.html  PulseVehicleRole_8h_source.html  PulseVehicleType_8h_source.html  PulseVehicle_8h_source.html  README.md  StatisticsCollector_8h_source.html  SumoConfigPath_8h_source.html  SumoIntegration_8h_source.html  SumoNetPath_8h_source.html  SumoUtils_8h_source.html  (+95 more)
.github/workflows/: ci.yml  doxygen.yml  test-all.yml  test-app.yml  test-library.yml
config/sumo/simulations/zhytomyr/2025-01-28-19-55-28/: osm.bus.trips.xml  osm_ptlines.xml  trips.trips.xml.errorlog
config/sumo/simulations/zhytomyr/2025-03-18-12-02-10/: osm.motorcycle.trips.xml  osm.sumocfg
docs/: use-case-1.puml  use-case-2.puml  use-case-3.puml  use-case-final.puml  use-case-general.puml
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js  variables_8.js
src/: main.cpp
sumo/simulations/zhytomyr/2025-01-28-19-55-28/: osm.polycfg  osm_pt.rou.xml
tests/: CMakeLists.txt
